[#10197] Fix Instructor Help page text to text align left

--- a/src/web/app/pages-help/instructor-help-page/instructor-help-courses-section/instructor-help-courses-section.component.scss
+++ b/src/web/app/pages-help/instructor-help-page/instructor-help-courses-section/instructor-help-courses-section.component.scss
@@ -5,3 +5,8 @@
 .instr-help-qn-last {
   padding-bottom: 5px;
 }
+@media (max-width:700px){
+  button{
+    text-align:left;
+  }
+}
